# ProjectCMakeGenerator

./: CMakeLists.txt  project.json
cmake/: Cson.cmake  ProjectReader.cmake  TemplateGenerator.cmake
cmake/templates/: ProjectDetails.h
cmake/templates/gui_app/: Main.cpp  MainComponent.cpp  MainComponent.h  template.json
src/: Main.cpp  MainComponent.cpp  MainComponent.h  MainComponentWhatever.cpp  MainComponentWhatever.h  ProjectDetails.h
